--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,36 @@
 	<groupId>com.demo</groupId>
 	<artifactId>SpringMaven</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<description>Simple Maven Project</description>
 
+	<properties>
+		<jdk.version>1.8</jdk.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<!-- <spring.version>3.2.2.RELEASE</spring.version> -->
+		<spring.version>4.1.6.RELEASE</spring.version>
+		<spring.batch.version>2.2.0.RELEASE</spring.batch.version>
+		<!-- <mysql.driver.version>8.0.28</mysql.driver.version> -->
+		<!-- <oracle.jdbc.version>12.2.0.1</oracle.jdbc.version> -->
+		<!-- <slf4j.version>1.6.6</slf4j.version> -->
+		<!-- <logback.version>1.0.7</logback.version> -->
+	</properties>
 
 	<build>
+		<finalName>spring-batch</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>2.3.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
-		</plugins>
+		</plugins>		
 	</build>
+
 
 </project>
